--- a/index.html
+++ b/index.html
@@ -437,22 +437,23 @@
       </div>
     </section>
 
-    <!-- Section Nous contacter -->
-    <section class="section contact-section">
-      <div class="section-content">
-        <div class="icon-container">
-          <div class="fashion-icon contact-icon">📧</div>
-        </div>
-        <h2 class="section-title">Nous contacter</h2>
-        <p class="section-subtitle">Une question ? Une suggestion ? Contactez-nous via vos plateformes préférées !</p>
-        <div class="contact-buttons">
-          <button class="modern-button" onclick="contactEmail()">📧 Email</button>
-          <button class="modern-button" onclick="contactDiscord()">📸 Instagram</button>
-          <button class="modern-button" onclick="contactTwitter()">🐦 x (Twitter)</button>
-          <button class="modern-button" onclick="contactInstagram()">📸 Facebook</button>
-        </div>
-      </div>
-    </section>
+   <!-- Section Nous contacter -->
+<section class="section contact-section">
+  <div class="section-content">
+    <div class="icon-container">
+      <div class="fashion-icon contact-icon">📧</div>
+    </div>
+    <h2 class="section-title">Nous contacter</h2>
+    <p class="section-subtitle">Des questions ? Une suggestion ? Contactez-nous via vos plateformes préférées !</p>
+    <div class="contact-buttons">
+      <button class="modern-button" onclick="contactEmail()">📧 Email</button>
+      <button class="modern-button" onclick="contactDiscord()">📸 Instagram</button>
+      <button class="modern-button" onclick="contactTwitter()">🐦 x (Twitter)</button>
+      <button class="modern-button" onclick="contactInstagram()">📸 Facebook</button>
+      <button class="modern-button" onclick="contactFAQ()">❓ FAQ</button>
+    </div>
+  </div>
+</section>
 
   </div>
 
