--- a/wiki.html
+++ b/wiki.html
@@ -275,7 +275,7 @@
     <!-- Statistiques rapides -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
       <div class="glass-effect-light rounded-2xl p-6 text-center">
-        <div class="text-3xl font-bold bg-gradient-to-r from-blue-400 to-purple-400 bg-clip-text text-transparent">9</div>
+        <div class="text-3xl font-bold bg-gradient-to-r from-blue-400 to-purple-400 bg-clip-text text-transparent">10</div>
         <div class="text-secondary font-medium">Sections détaillées</div>
       </div>
       <div class="glass-effect-light rounded-2xl p-6 text-center">
@@ -442,9 +442,28 @@
         </a>
       </div>
 
-      <!-- 9. Conclusion -->
+      <!-- 9. FAQ -->
       <div class="category-card glass-effect rounded-2xl p-8 relative group">
         <div class="category-number">9</div>
+        <div class="flex items-start space-x-4 mb-6">
+          <span class="category-icon">❓</span>
+          <div>
+            <h2 class="text-xl font-bold text-primary mb-2 group-hover:text-purple-400 transition-colors">
+              FAQ - Questions Fréquentes
+            </h2>
+            <p class="text-muted text-sm leading-relaxed">
+              Réponses aux questions les plus courantes sur FashionFlow
+            </p>
+          </div>
+        </div>
+        <a href="faq.html" class="inline-flex items-center text-purple-400 hover:text-purple-300 font-semibold text-sm group-hover:translate-x-1 transition-transform">
+          Explorer →
+        </a>
+      </div>
+
+      <!-- 10. Conclusion -->
+      <div class="category-card glass-effect rounded-2xl p-8 relative group">
+        <div class="category-number">10</div>
         <div class="flex items-start space-x-4 mb-6">
           <span class="category-icon">✅</span>
           <div>
@@ -480,7 +499,7 @@
     <div class="max-w-7xl mx-auto px-6 py-8">
       <div class="text-center text-secondary">
         <p class="font-medium">© 2025 FashionFlow - Documentation Wiki</p>
-        <p class="text-sm mt-2 text-muted">Dernière mise à jour : 15 juin 2025</p>
+        <p class="text-sm mt-2 text-muted">Dernière mise à jour : 17 juin 2025</p>
       </div>
     </div>
   </footer>
