--- a/whatsupp.html
+++ b/whatsupp.html
@@ -204,6 +204,7 @@
             <h3 class="font-semibold text-gray-800">FAQ</h3>
           </div>
           <p class="text-gray-600 text-sm">Création d'une page "Foire aux questions (FAQ)"</p>
+          <span class="inline-block mt-2 text-xs bg-orange-100 text-orange-700 px-2 py-1 rounded-full">En préparation</span>
         </div>
 
         <div class="bg-gradient-to-br from-pink-50 to-pink-100 p-6 rounded-xl border border-pink-200">
