--- a/whatsupp.html
+++ b/whatsupp.html
@@ -100,6 +100,11 @@
       background: linear-gradient(135deg, #10b981, #059669);
       color: white;
     }
+    
+    .whatsapp-update {
+      background: linear-gradient(135deg, #25D366, #128C7E);
+      color: white;
+    }
   </style>
 </head>
 <body class="bg-gray-50 text-gray-800 min-h-screen">
@@ -132,6 +137,23 @@
       </div>
 
       <div class="space-y-6">
+        <div class="timeline-item">
+          <div class="bg-gradient-to-r from-green-50 to-green-100 rounded-lg p-4 border-l-4 border-green-400">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-sm font-semibold text-green-700 bg-green-200 px-3 py-1 rounded-full">17 juin 2025</span>
+              <span class="text-xs text-white font-medium whatsapp-update px-2 py-1 rounded">WHATSAPP</span>
+            </div>
+            <h4 class="text-gray-800 font-semibold mb-2">📱 Système de mise à jour WhatsApp</h4>
+            <p class="text-gray-700 mb-2">Lancement du système de notifications et mises à jour via WhatsApp pour la communauté FashionFlow</p>
+            <div class="bg-green-50 border-l-4 border-green-400 p-3 mt-3">
+              <div class="flex items-center">
+                <span class="text-xs text-green-600 font-medium new-feature px-2 py-1 rounded mr-2">NOUVEAU</span>
+                <span class="text-green-700 text-sm">Rejoignez notre groupe WhatsApp pour recevoir les actualités en temps réel</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="timeline-item">
           <div class="bg-gradient-to-r from-green-50 to-green-100 rounded-lg p-4 border-l-4 border-green-400">
             <div class="flex items-center justify-between mb-2">
@@ -215,14 +237,6 @@
           <p class="text-gray-600 text-sm">Possibilité de voter pour les fonctionnalités à venir</p>
         </div>
 
-        <div class="bg-gradient-to-br from-green-50 to-green-100 p-6 rounded-xl border border-green-200">
-          <div class="flex items-center mb-3">
-            <span class="feature-icon text-2xl mr-3">📱</span>
-            <h3 class="font-semibold text-gray-800">WhatsApp</h3>
-          </div>
-          <p class="text-gray-600 text-sm">Ajout du système de mise à jour par WhatsApp</p>
-        </div>
-
         <div class="bg-gradient-to-br from-purple-50 to-purple-100 p-6 rounded-xl border border-purple-200">
           <div class="flex items-center mb-3">
             <span class="feature-icon text-2xl mr-3">🍪</span>
@@ -288,7 +302,7 @@
             </a>
             
             <p class="text-green-200 text-sm mt-4 opacity-90">
-              Plus de 500+ membres nous font déjà confiance ✨
+              objectif atteindre les 50 membres avant la fin de l'année ✨
             </p>
           </div>
         </div>
