--- a/whatsupp.html
+++ b/whatsupp.html
@@ -220,13 +220,13 @@
           <p class="text-gray-600 text-sm">Ajout d'un système de commentaires sur chaque section du Wiki</p>
         </div>
 
-        <div class="bg-gradient-to-br from-orange-50 to-orange-100 p-6 rounded-xl border border-orange-200">
+        <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 p-6 rounded-xl border border-indigo-200">
           <div class="flex items-center mb-3">
             <span class="feature-icon text-2xl mr-3">❓</span>
             <h3 class="font-semibold text-gray-800">FAQ</h3>
           </div>
           <p class="text-gray-600 text-sm">Création d'une page "Foire aux questions (FAQ)"</p>
-          <span class="inline-block mt-2 text-xs bg-orange-100 text-orange-700 px-2 py-1 rounded-full">En préparation</span>
+          <span class="inline-block mt-2 text-xs bg-indigo-100 text-indigo-700 px-2 py-1 rounded-full">En préparation</span>
         </div>
 
         <div class="bg-gradient-to-br from-pink-50 to-pink-100 p-6 rounded-xl border border-pink-200">
