--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
 
     // Fonctions de contact
     function contactEmail() {
-      window.location.href = 'mailto:contact@fashionflow.com?subject=Contact depuis FashionFlow';
-    }
+     <a href="contacte.html" class="modern-button">📧 Email</a>
+
 
     function contactDiscord() {
       window.open('https://discord.gg/fashionflow', '_blank');
