--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
 
     // Fonctions de navigation
     function goToWiki() {
-      alert('Redirection vers le wiki (remplacez par window.location.href = "wiki.html")');
+      window.location.href = "wiki.html";
     }
 
     function goToNews() {
-      alert('Redirection vers les news (remplacez par window.location.href = "whatsupp.html")');
+      window.location.href = "whatsupp.html";
     }
 
     function donate() {
@@ -516,7 +516,7 @@
 
     // Fonctions de contact
     function contactEmail() {
-      alert('Redirection vers la page de contact (remplacez par window.location.href = "contacte.html")');
+      window.location.href = "contacte.html";
     }
 
     function contactInstagram() {
@@ -532,7 +532,7 @@
     }
 
     function contactFAQ() {
-      alert('Redirection vers la FAQ (remplacez par window.location.href = "faq.html")');
+      window.location.href = "faq.html";
     }
 
     function showPopup() {
