--- a/whatsupp.html
+++ b/whatsupp.html
@@ -363,6 +363,16 @@
         </div>
       </div>
       
+      <!-- Bouton de retour à l'accueil -->
+      <div class="mb-8">
+        <a href="index.html" class="btn-back inline-flex items-center px-8 py-4 rounded-lg text-white font-medium hover:text-white transition-all duration-300 text-lg">
+          <svg class="w-6 h-6 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+          </svg>
+          Retour à l'accueil
+        </a>
+      </div>
+
       <div class="border-t border-gray-200 pt-8">
         <p class="text-gray-600 font-medium text-lg mb-2">
           © 2025 FashionFlow - Tous droits réservés
