--- a/ArchiveMiseajour.html
+++ b/ArchiveMiseajour.html
@@ -301,23 +301,23 @@
                 switch(update.type) {
                     case 'feature':
                         icon = 'fa-star';
-                        bgColor = 'bg-blue-100';
-                        textColor = 'text-blue-800';
+                        bgColor = 'bg-blue-500/10';
+                        textColor = 'text-blue-600';
                         break;
                     case 'bugfix':
                         icon = 'fa-bug';
-                        bgColor = 'bg-red-100';
-                        textColor = 'text-red-800';
+                        bgColor = 'bg-red-500/10';
+                        textColor = 'text-red-600';
                         break;
                     case 'improvement':
                         icon = 'fa-chart-line';
-                        bgColor = 'bg-green-100';
-                        textColor = 'text-green-800';
+                        bgColor = 'bg-green-500/10';
+                        textColor = 'text-green-600';
                         break;
                     case 'security':
                         icon = 'fa-shield-alt';
-                        bgColor = 'bg-purple-100';
-                        textColor = 'text-purple-800';
+                        bgColor = 'bg-purple-500/10';
+                        textColor = 'text-purple-600';
                         break;
                     default:
                         icon = 'fa-sync-alt';
@@ -345,9 +345,14 @@
                                 </div>
                             </div>
                             <p class="mt-1 text-gray-600">${update.description}</p>
-                            <div class="mt-2 flex items-center text-sm text-gray-500">
-                                <i class="fas fa-user-circle mr-1"></i>
-                                <span>${update.author}</span>
+                            <div class="mt-2">
+                                <span class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium ${bgColor} ${textColor}">
+                                    <i class="fas ${icon} mr-1"></i>
+                                    ${update.type === 'feature' ? 'Nouveauté' : 
+                                      update.type === 'bugfix' ? 'Correction' : 
+                                      update.type === 'improvement' ? 'Amélioration' : 
+                                      'Sécurité'}
+                                </span>
                             </div>
                         </div>
                     </div>
