--- a/whatsupp.html
+++ b/whatsupp.html
@@ -439,21 +439,28 @@
     </section>
   </main>
 
-  <!-- Modal de mot de passe -->
-  <div id="passwordModal" class="password-modal">
-    <div class="password-content">
-      <h3 class="text-xl font-bold text-gray-800 mb-4 flex items-center">
-        <i class="fas fa-lock mr-3 text-purple-600"></i> Accès Administrateur
-      </h3>
-      <p class="text-gray-600 mb-4">Veuillez entrer le mot de passe pour accéder à cette section.</p>
-      
-      <div class="password-input mb-4">
-        <input type="password" id="adminPassword" placeholder="Mot de passe" 
-               class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-purple-500">
-        <span class="toggle-password" onclick="togglePasswordVisibility()">
-          <i class="fas fa-eye"></i>
-        </span>
-      </div>
+ <!-- Bouton Archives avec vérification du mot de passe -->
+<div class="flex justify-center mb-8">
+  <a href="#" onclick="checkAdminPassword()" class="btn-primary inline-flex items-center px-6 py-3 rounded-lg text-white font-medium hover:text-white transition-colors">
+    <i class="fas fa-archive mr-2"></i>
+    Voir les archives complètes
+  </a>
+</div>
+
+<script>
+  function checkAdminPassword() {
+    const password = prompt("Entrez le mot de passe admin :");
+
+    if (password === "LucieKaraoui") {
+      window.location.href = "ArchiveMiseajour.html";
+    } else if (password === null) {
+      alert("Accès annulé.");
+    } else {
+      alert("Mot de passe incorrect.");
+    }
+  }
+</script>
+
       
       <p id="passwordError" class="text-red-500 text-sm mb-4 hidden">
         <i class="fas fa-exclamation-circle mr-1"></i> Mot de passe incorrect
