--- a/whatsupp.html
+++ b/whatsupp.html
@@ -439,43 +439,48 @@
     </section>
   </main>
 
- <!-- Bouton Archives avec vérification du mot de passe -->
+ <!-- Bouton Archives -->
 <div class="flex justify-center mb-8">
-  <a href="#" onclick="checkAdminPassword()" class="btn-primary inline-flex items-center px-6 py-3 rounded-lg text-white font-medium hover:text-white transition-colors">
+  <a href="#" onclick="openDevPopup()" class="btn-primary inline-flex items-center px-6 py-3 rounded-lg text-white font-medium hover:text-white transition-colors">
     <i class="fas fa-archive mr-2"></i>
     Voir les archives complètes
   </a>
 </div>
 
-<script>
-  function checkAdminPassword() {
-    const password = prompt("Entrez le mot de passe admin :");
+<!-- POPUP Mot de passe admin -->
+<div id="devPopup" class="popup-overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; z-index: 9999;">
+  <div class="popup-content email-popup-content" style="background: white; padding: 2rem; border-radius: 12px; max-width: 400px; width: 90%; text-align: center;">
+    <h3 style="margin-bottom: 1rem;">🚀 Idées de Développement</h3>
+    <p style="margin-bottom: 1rem;">Fonctionnalité désactivée pour bug</p>
+    <p style="margin-bottom: 1rem; font-size: 0.9rem;">Si vous êtes admin, entrez le mot de passe :</p>
+    <input type="password" class="admin-input" id="devAdminPassword" placeholder="Mot de passe admin" style="padding: 0.5rem; width: 100%; border-radius: 8px; border: 1px solid #ccc;">
+    <div style="margin-top: 1rem;">
+      <button class="modern-button" onclick="checkDevAdminPassword()" style="margin: 0.5rem;">Vérifier</button>
+      <button class="modern-button" onclick="closeDevPopup()" style="margin: 0.5rem;">Fermer</button>
+    </div>
+  </div>
+</div>
 
+<!-- JS -->
+<script>
+  function openDevPopup() {
+    document.getElementById("devPopup").style.display = "flex";
+  }
+
+  function closeDevPopup() {
+    document.getElementById("devPopup").style.display = "none";
+    document.getElementById("devAdminPassword").value = ""; // Reset champ
+  }
+
+  function checkDevAdminPassword() {
+    const password = document.getElementById("devAdminPassword").value;
     if (password === "LucieKaraoui") {
       window.location.href = "ArchiveMiseajour.html";
-    } else if (password === null) {
-      alert("Accès annulé.");
     } else {
       alert("Mot de passe incorrect.");
     }
   }
 </script>
-
-      
-      <p id="passwordError" class="text-red-500 text-sm mb-4 hidden">
-        <i class="fas fa-exclamation-circle mr-1"></i> Mot de passe incorrect
-      </p>
-      
-      <div class="flex justify-between">
-        <button onclick="hidePasswordModal()" class="px-4 py-2 bg-gray-200 text-gray-700 rounded-lg hover:bg-gray-300 transition-colors">
-          Annuler
-        </button>
-        <button onclick="checkPassword()" class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700 transition-colors">
-          <i class="fas fa-unlock-alt mr-2"></i> Valider
-        </button>
-      </div>
-    </div>
-  </div>
 
   <!-- Footer avec bouton de retour -->
   <footer class="bg-white border-t border-gray-200 mt-16">
