--- a/whatsupp.html
+++ b/whatsupp.html
@@ -439,45 +439,38 @@
     </section>
   </main>
 
- <!-- Bouton Archives -->
-<div class="flex justify-center mb-8">
-  <a href="#" onclick="openDevPopup()" class="btn-primary inline-flex items-center px-6 py-3 rounded-lg text-white font-medium hover:text-white transition-colors">
-    <i class="fas fa-archive mr-2"></i>
-    Voir les archives complètes
-  </a>
-</div>
-
-<!-- POPUP Mot de passe admin -->
-<div id="devPopup" class="popup-overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center; z-index: 9999;">
-  <div class="popup-content email-popup-content" style="background: white; padding: 2rem; border-radius: 12px; max-width: 400px; width: 90%; text-align: center;">
-    <h3 style="margin-bottom: 1rem;">🚀 Idées de Développement</h3>
-    <p style="margin-bottom: 1rem;">Fonctionnalité désactivée pour bug</p>
-    <p style="margin-bottom: 1rem; font-size: 0.9rem;">Si vous êtes admin, entrez le mot de passe :</p>
-    <input type="password" class="admin-input" id="devAdminPassword" placeholder="Mot de passe admin" style="padding: 0.5rem; width: 100%; border-radius: 8px; border: 1px solid #ccc;">
-    <div style="margin-top: 1rem;">
-      <button class="modern-button" onclick="checkDevAdminPassword()" style="margin: 0.5rem;">Vérifier</button>
-      <button class="modern-button" onclick="closeDevPopup()" style="margin: 0.5rem;">Fermer</button>
-    </div>
-  </div>
-</div>
-
-<!-- JS -->
 <script>
-  function openDevPopup() {
+  // Mot de passe admin fourni par l’utilisateur
+  const ADMIN_PASSWORD = "lucie karaoui";
+
+  function showDevPopup() {
     document.getElementById("devPopup").style.display = "flex";
   }
 
   function closeDevPopup() {
     document.getElementById("devPopup").style.display = "none";
-    document.getElementById("devAdminPassword").value = ""; // Reset champ
+    document.getElementById("devAdminPassword").value = "";
   }
 
   function checkDevAdminPassword() {
-    const password = document.getElementById("devAdminPassword").value;
-    if (password === "LucieKaraoui") {
+    const val = document.getElementById("devAdminPassword").value;
+    if (val === ADMIN_PASSWORD) {
+      alert("✅ Accès admin validé — envoyez vos idées !");
+      closeDevPopup();
+      // …votre logique ici
+    }
+    else {
+      alert("❌ Mot de passe incorrect");
+    }
+  }
+
+  function checkArchivePassword(event) {
+    event.preventDefault();
+    const pwd = prompt("🔒 Entrez le mot de passe admin pour accéder aux archives :");
+    if (pwd === ADMIN_PASSWORD) {
       window.location.href = "ArchiveMiseajour.html";
     } else {
-      alert("Mot de passe incorrect.");
+      alert("❌ Mot de passe incorrect");
     }
   }
 </script>
