--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
       if (password === correctPassword) {
         alert('Mot de passe correct ! Redirection vers la page de développement...');
         closeDevPopup();
-        // Redirection vers developpement.html
-        window.location.href = "developpement.html";
+        // Redirection vers blogue.html au lieu de developpement.html
+        window.location.href = "blogue.html";
       } else {
         alert('Mot de passe incorrect !');
         document.getElementById('devAdminPassword').value = '';
