--- a/whatsupp.html
+++ b/whatsupp.html
@@ -150,6 +150,27 @@
               <span class="text-sm font-semibold text-green-700 bg-green-200 px-3 py-1 rounded-full">17 juin 2025</span>
               <span class="text-xs text-white font-medium whatsapp-update px-2 py-1 rounded">WHATSAPP</span>
             </div>
+            <div class="timeline-item">
+  <div class="bg-gradient-to-r from-pink-50 to-yellow-100 rounded-lg p-4 border-l-4 border-pink-400">
+    <div class="flex items-center justify-between mb-2">
+      <span class="text-sm font-semibold text-pink-700 bg-pink-200 px-3 py-1 rounded-full">20 juin 2025</span>
+      <span class="text-xs text-pink-700 font-medium new-feature px-2 py-1 rounded" style="background: linear-gradient(135deg,#f472b6,#fbbf24); color:white;">FÊTE</span>
+    </div>
+    <h4 class="text-gray-800 font-semibold mb-2">
+      🎉🎈✨ Ouverture du blogue !! <span style="font-size:1.3em;">🎊🪩🎆</span>
+    </h4>
+    <p class="text-gray-700 mb-2">
+      Le blogue est officiellement ouvert ! Découvrez nos premiers articles, partagez vos retours et faites la fête avec nous !<br>
+      <span class="inline-block mt-2 text-lg">🥳 🎉 🪩 🎈 🎆</span>
+    </p>
+    <div class="bg-pink-50 border-l-4 border-pink-400 p-3 mt-3">
+      <div class="flex items-center">
+        <span class="text-xs text-pink-600 font-medium px-2 py-1 rounded mr-2 bg-pink-200">NOUVEAU</span>
+        <span class="text-pink-700 text-sm">Première publication sur le blogue – on célèbre ça !</span>
+      </div>
+    </div>
+  </div>
+</div>
             <h4 class="text-gray-800 font-semibold mb-2">📱 Système de mise à jour WhatsApp</h4>
             <p class="text-gray-700 mb-2">Lancement du système de notifications et mises à jour via WhatsApp pour la communauté FashionFlow</p>
             <div class="bg-green-50 border-l-4 border-green-400 p-3 mt-3">
@@ -269,7 +290,14 @@
             <i class="fas fa-key mr-2"></i> Accès Admin
           </button>
         </div>
-
+<div class="bg-gradient-to-br from-pink-50 to-yellow-100 p-6 rounded-xl border border-pink-200">
+  <div class="flex items-center mb-3">
+    <span class="feature-icon text-2xl mr-3">📝</span>
+    <h3 class="font-semibold text-gray-800">Mise à jour du blogue</h3>
+  </div>
+  <p class="text-gray-600 text-sm">Améliorations à venir sur la section blogue et nouveaux articles à découvrir prochainement !</p>
+  <span class="inline-block mt-2 text-xs bg-pink-100 text-pink-700 px-2 py-1 rounded-full">À venir</span>
+</div>
         <div class="bg-gradient-to-br from-emerald-50 to-emerald-100 p-6 rounded-xl border border-emerald-200">
           <div class="flex items-center mb-3">
             <span class="feature-icon text-2xl mr-3">💬</span>
